--- a/settings/settings.json
+++ b/settings/settings.json
@@ -86,6 +86,7 @@
       "warmupIterations": 3,
       "measurementIterations": 3,
       "forks": 2,
+      "threads": [1, 8, 16, 24, 36, 48, 56, 64],
       "limitVirtualScheduler" : true,
       "pinUsingJna": true,
       "light": true,
@@ -98,6 +99,7 @@
       "actionsCount": 36864,
       "warmupIterations": 3,
       "measurementIterations": 3,
+      "threads": [1, 8, 16, 24, 36, 48, 56, 64],
       "limitVirtualScheduler" : true,
       "pinUsingJna": true,
       "forks": 2,
