--- a/settings/settings.json
+++ b/settings/settings.json
@@ -2,15 +2,15 @@
   "locks": [
     {
       "name": "TAS",
-      "skip": false
+      "skip": true
     },
     {
       "name": "TTAS",
-      "skip": false
+      "skip": true
     },
     {
       "name": "MCS",
-      "skip": false
+      "skip": true
     },
     {
       "name": "FAIR_REENTRANT",
@@ -22,19 +22,19 @@
     },
     {
       "name": "CNA_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "CNA_CCL",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HCLH_CCL",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HCLH_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_CCL_NUMA",
@@ -42,35 +42,35 @@
     },
     {
       "name": "HMCS_CCL_NUMA_SUPERNUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_CCL",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "COMB_HCLH_CCL_MCS_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "COMB_CNA_CCL_MCS_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "COMB_TTAS_CCL_HCLH_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "COMB_TTAS_CCL_CNA_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "COMB_TTAS_NUMA_MCS",
-      "skip": false
+      "skip": true
     }
   ],
   "benches": [
@@ -97,7 +97,7 @@
       "forks": 2,
       "limitVirtualScheduler" : true,
       "pinUsingJna": true,
-      "light": false,
+      "light": true,
       "skip": false
     },
     {
@@ -124,7 +124,7 @@
       "pinUsingJna": true,
       "forks": 2,
       "light": true,
-      "skip": false
+      "skip": true
     }
   ]
 }
