--- a/settings/settings.json
+++ b/settings/settings.json
@@ -78,10 +78,18 @@
     },
     {
       "name": "HMCS_NUMA_V3",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_NUMA_V4",
+      "skip": true
+    },
+    {
+      "name": "HMCS_NUMA_V5",
+      "skip": false
+    },
+    {
+      "name": "HMCS_NUMA_V6",
       "skip": false
     }
   ],
