--- a/settings/settings.json
+++ b/settings/settings.json
@@ -2,95 +2,95 @@
   "locks": [
     {
       "name": "TAS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "SYNCHRONIZED",
-      "skip": true
+      "skip": false
     },
     {
       "name": "TTAS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "MCS_PARK",
-      "skip": true
+      "skip": false
     },
     {
       "name": "FAIR_REENTRANT",
-      "skip": true
+      "skip": false
     },
     {
       "name": "UNFAIR_REENTRANT",
-      "skip": true
+      "skip": false
     },
     {
       "name": "CNA_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HCLH_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL_NUMA_SUPERNUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_HCLH_CCL_MCS_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_CNA_CCL_MCS_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_TTAS_CCL_HCLH_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_TTAS_CCL_CNA_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_TTAS_NUMA_MCS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "TTAS_CCL_MCS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL_NUMA_V2",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V3",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V4",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V5",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V6",
-      "skip": true
+      "skip": false
     },
     {
       "name": "CNA_NUMA_SLEEP",
@@ -109,7 +109,7 @@
       "in": 1000,
       "warmupIterations": 3,
       "measurementIterations": 3,
-      "forks": 2,
+      "forks": 3,
       "limitVirtualScheduler": true,
       "pinUsingJna": true,
       "light": true,
@@ -122,27 +122,8 @@
       "in": 100,
       "warmupIterations": 3,
       "measurementIterations": 3,
-      "forks": 2,
-      "threads": [
-        1,
-        2,
-        4,
-        8,
-        16,
-        24,
-        32,
-        46,
-        47,
-        48,
-        56,
-        64,
-        74,
-        82,
-        80,
-        88,
-        96,
-        104
-      ],
+      "forks": 3,
+      "threads": [],
       "limitVirtualScheduler": true,
       "pinUsingJna": true,
       "light": true,
