--- a/settings/settings.json
+++ b/settings/settings.json
@@ -113,7 +113,7 @@
       "limitVirtualScheduler": true,
       "pinUsingJna": true,
       "light": true,
-      "skip": false
+      "skip": true
     },
     {
       "name": "consumeCpu",
@@ -123,7 +123,6 @@
       "warmupIterations": 3,
       "measurementIterations": 3,
       "forks": 3,
-      "threads": [],
       "limitVirtualScheduler": true,
       "pinUsingJna": true,
       "light": true,
