--- a/settings/settings.json
+++ b/settings/settings.json
@@ -113,7 +113,7 @@
       "limitVirtualScheduler": true,
       "pinUsingJna": true,
       "light": true,
-      "skip": true
+      "skip": false
     },
     {
       "name": "consumeCpu",
