--- a/settings/settings.json
+++ b/settings/settings.json
@@ -2,51 +2,51 @@
   "locks": [
     {
       "name": "TAS",
-      "skip": false
+      "skip": true
     },
     {
       "name": "SYNCHRONIZED",
-      "skip": false
+      "skip": true
     },
     {
       "name": "TTAS",
-      "skip": false
+      "skip": true
     },
     {
       "name": "MCS_PARK",
-      "skip": false
+      "skip": true
     },
     {
       "name": "FAIR_REENTRANT",
-      "skip": false
+      "skip": true
     },
     {
       "name": "UNFAIR_REENTRANT",
-      "skip": false
+      "skip": true
     },
     {
       "name": "CNA_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HCLH_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_CCL_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_CCL_NUMA_SUPERNUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_CCL",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_NUMA",
-      "skip": false
+      "skip": true
     },
     {
       "name": "COMB_HCLH_CCL_MCS_NUMA",
@@ -70,27 +70,27 @@
     },
     {
       "name": "TTAS_CCL_MCS",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_CCL_NUMA_V2",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_NUMA_V3",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_NUMA_V4",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_NUMA_V5",
-      "skip": false
+      "skip": true
     },
     {
       "name": "HMCS_NUMA_V6",
-      "skip": false
+      "skip": true
     },
     {
       "name": "CNA_NUMA_SLEEP",
