--- a/settings/settings.json
+++ b/settings/settings.json
@@ -2,95 +2,95 @@
   "locks": [
     {
       "name": "TAS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "SYNCHRONIZED",
-      "skip": true
+      "skip": false
     },
     {
       "name": "TTAS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "MCS_PARK",
-      "skip": true
+      "skip": false
     },
     {
       "name": "FAIR_REENTRANT",
-      "skip": true
+      "skip": false
     },
     {
       "name": "UNFAIR_REENTRANT",
-      "skip": true
+      "skip": false
     },
     {
       "name": "CNA_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HCLH_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL_NUMA_SUPERNUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_HCLH_CCL_MCS_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_CNA_CCL_MCS_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_TTAS_CCL_HCLH_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_TTAS_CCL_CNA_NUMA",
-      "skip": true
+      "skip": false
     },
     {
       "name": "COMB_TTAS_NUMA_MCS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "TTAS_CCL_MCS",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_CCL_NUMA_V2",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V3",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V4",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V5",
-      "skip": true
+      "skip": false
     },
     {
       "name": "HMCS_NUMA_V6",
-      "skip": true
+      "skip": false
     },
     {
       "name": "CNA_NUMA_SLEEP",
@@ -113,7 +113,8 @@
       "limitVirtualScheduler": true,
       "pinUsingJna": true,
       "light": true,
-      "skip": false
+      "highCont": true,
+      "skip": true
     },
     {
       "name": "consumeCpu",
@@ -126,6 +127,21 @@
       "limitVirtualScheduler": true,
       "pinUsingJna": true,
       "light": true,
+      "highCont": false,
+      "skip": true
+    },
+    {
+      "name": "consumeCpu",
+      "actionsCount": 36864,
+      "before": 5000,
+      "in": 5000,
+      "warmupIterations": 3,
+      "measurementIterations": 3,
+      "forks": 3,
+      "limitVirtualScheduler": true,
+      "pinUsingJna": true,
+      "light": true,
+      "highCont": false,
       "skip": false
     }
   ]
