--- a/settings/settings.json
+++ b/settings/settings.json
@@ -60,7 +60,7 @@
       "forks": 1,
       "highCont": true,
       "yieldsBefore": 1,
-      "title": "Высокая конкуренция. Внешняя работа отсутствует. 1 точка переключения"
+      "title": "Высокая конкуренция. Внутренняя ~3000 нс. Внешняя работа отсутствует. 1 точка переключения"
     },
     {
       "name": "consumeCpu",
@@ -73,7 +73,7 @@
       "forks": 1,
       "yieldsBefore": 2,
       "highCont": false,
-      "title": "Низкая конкуренция. Внешняя работа в 128 раз больше внутренней. 2 точки переключения"
+      "title": "Низкая конкуренция. Внутренняя ~3000 нс. Внешняя работа в 128 раз больше внутренней. 2 точки переключения"
     }
   ]
 }
